Revert "Fix  #2337: Alignement icone "Sujet résolu" en format mobile"
This reverts commit 11c9a288e74e483ebfcd16a7cbec302a806e996e.

--- a/assets/scss/components/_topic-list.scss
+++ b/assets/scss/components/_topic-list.scss
@@ -330,7 +330,7 @@
 @media only screen and #{$media-mobile} {
     .topic-list {
         .topic-infos .ico-after:after {
-            margin: 4px 0 0 10px;
+            margin: 4px 0 0 2px;
         }
         .topic-description {
             .topic-subtitle:empty {
